provision/k8s/manifests/overlays/whoami/whoami-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
  selector:
    app: traefiklabs
    task: whoami
